<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dirt_background"
        tools:context=".OptionsScreen">

    <RadioGroup
            android:layout_width="360dp"
            android:layout_height="123dp"
            android:id="@+id/board_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp">
        <RadioButton
                android:text="@string/_4_rows_by_6_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/fourbysix" android:textColor="#E9E3E3"
                android:fontFamily="@font/minecraft_font" android:buttonTint="#707070"/>
        <RadioButton
                android:text="@string/_5_rows_by_10_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/fivebyten"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
        <RadioButton
                android:text="@string/_6_rows_by_15_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sixbyfifteen"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
    </RadioGroup>
    <TextView
            android:text="@string/board_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintEnd_toStartOf="@+id/board_size"
            android:layout_marginEnd="60dp" android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3"/>
    <TextView
            android:text="@string/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"/>
    <TextView
            android:text="@string/number_of_mines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MineCount" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="124dp" app:layout_constraintStart_toStartOf="@+id/textView"
            android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3"/>
    <RadioGroup
            android:layout_width="362dp"
            android:layout_height="137dp"
            android:id="@+id/MineRadio"
            app:layout_constraintTop_toBottomOf="@+id/board_size"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498">
        <RadioButton
                android:text="@string/_6_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sixMines"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
        <RadioButton
                android:text="@string/_10_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tenMines"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
        <RadioButton
                android:text="@string/_15_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/fifteenMines"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
        <RadioButton
                android:text="@string/_20_mines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/twentyMines"
                android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:buttonTint="#707070"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>