<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/dirt_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelpScreen">

    <TextView
            android:text="@string/minecraft_font_by_pwnage_block"
            android:layout_width="171dp"
            android:layout_height="58dp"
            android:id="@+id/textView11" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/background"
            android:layout_width="170dp"
            android:layout_height="66dp"
            android:id="@+id/textView10" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"
            app:layout_constraintEnd_toStartOf="@+id/textView11" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/enchanting_bottle_and_creeper_face_from_minecraft"
            android:layout_width="190dp"
            android:layout_height="59dp"
            android:id="@+id/textView12" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"
            app:layout_constraintStart_toEndOf="@+id/textView11" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/citations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/game_description"
            android:layout_width="563dp"
            android:layout_height="115dp"
            android:id="@+id/textView6" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="5dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/about_the_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/about_the_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/author_description"
            android:layout_width="565dp"
            android:layout_height="58dp"
            android:id="@+id/textView4" android:textColor="#E9E3E3"
            android:fontFamily="@font/minecraft_font"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="15dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>