<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dirt_background"
        tools:context=".MainMenu">

    <Button
            android:text="@string/options"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:id="@+id/optionsButton"
            android:background="@drawable/button"
            android:textColor="#E9E3E3"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/minecraft_font"/>
    <Button
            android:text="@string/help"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:id="@+id/helpButton"
            android:background="@drawable/button"
            android:textColor="#E9E3E3"
            app:layout_constraintTop_toBottomOf="@+id/gameButton" android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/optionsButton"
            app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/minecraft_font"/>
    <Button
            android:text="@string/play_game"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:id="@+id/gameButton"
            android:background="@drawable/button"
            android:textColor="#E9E3E3"
            android:layout_marginTop="183dp" android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/helpButton"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/minecraft_font"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:fontFamily="@font/minecraft_font" android:textColor="#E9E3E3" android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/gameButton"
            android:layout_marginTop="73dp" android:layout_marginStart="46dp"
            android:layout_marginBottom="194dp" app:layout_constraintBottom_toTopOf="@+id/optionsButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>